# gearshifft

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CMakeLists.txt  LICENSE  README.md  gearshifftConfig.cmake
.travis/: install_amd_sdk.sh
cmake/: BoostTargets.cmake  FindARMPL.cmake  FindESSL.cmake  FindFFTW.cmake  FindFFTWWrappers.cmake  FindFFTWWrappers.md  FindOpenCL.cmake  FindclFFT.cmake  boost_targets.cmake  find_and_add_openmp.cmake  gearshifft-options.cmake  gearshifft_options.cmake  gearshifft_version.cpp.in  get-gearshifft-options.cmake  get_gearshifft_options.cmake  half.cmake  init_build_type.cmake  linux-distro-helper.cmake  openmp-helper.cmake  safeguards.cmake  superbuild.cmake
cmake/ext/: Boost.cmake  FFTW.cmake  clfft.cmake  half.cmake  rocfft.cmake
cmake/modules/: FindARMPL.cmake  FindFFTW.cmake  FindFFTWWrappers.cmake  FindclFFT.cmake  FindhcFFT.cmake
cmake/superbuild/: Boost.cmake  CMakeLists.txt  FFTW.cmake  clfft.cmake  rocfft.cmake
config/: extents.csv  extents_1d_fftw.conf  extents_1d_publication.conf  extents_2d_publication.conf
gearshifft/: CMakeLists.txt  benchmark.cpp  options.cpp
inc/: application.hpp  benchmark_data.hpp  benchmark_executor.hpp  benchmark_suite.hpp  clfft.hpp  clfft_helper.hpp  cufft.hpp  cufft_helper.hpp  fft.hpp  fft_abstract.hpp  fftw.hpp  fixture_benchmark.hpp  fixture_data.hpp  fixture_test_suite.hpp  fixture_test_suite_extents.hpp  gearshifft_version.hpp  helper.h  options.hpp  result_all.hpp  result_benchmark.hpp  statistics.h  timer.h  timer.hpp  timer_cuda.h  timer_cuda.hpp  timer_opencl.h  timer_opencl.hpp  timestatistics.h  traits.hpp  types.hpp
inc/core/: application.hpp  benchmark.hpp  benchmark_data.hpp  benchmark_executor.hpp  benchmark_suite.hpp  complex-half.hpp  context.hpp  fft.hpp  get_memory_size.h  options.hpp  result_all.hpp  result_benchmark.hpp  result_writer.hpp  timer.hpp  timer_cpu.hpp  timer_cuda.hpp  timer_hip.hpp  timer_opencl.hpp  traits.hpp  types.hpp  unused.hpp
inc/libraries/clfft/: clfft.hpp  clfft_helper.hpp
inc/libraries/cufft/: cufft.hpp  cufft_helper.hpp
inc/libraries/fftw/: fftw.hpp  get_memory_size.h  gurufftw.hpp
inc/libraries/rocfft/: rocfft.hpp  rocfft_helper.hpp
lib/helper/inc/: globals_cuda.h  globals_opencl.h  helper.h  statistics.h  timer.h  timer_cuda.h  timer_opencl.h  timestatistics.h
lib/helper/src/: CMakeLists.txt  statistics.cpp
packaging/: CMakeLists.txt  Description.txt  License.txt  Readme.txt  Welcome.txt
results/GTX1080/: .gitignore  sbatch_furiosa_cufft_clfft_gtx1080.sh
results/GTX1080/clfft-2.12.1/: clfft_gcc5.3.0_centos7.2.csv
results/GTX1080/clfft-2.12.2/: clfft.slurm  clfft_gcc5.3.0_centos7.2.csv
results/GTX1080/cuda-8.0.44/: cufft.slurm  cufft_gcc5.3.0_centos7.2.csv
results/GTX1080/cuda-8.0.61/: cufft_gcc5.3.0_RHEL7.2.csv
results/K20Xm/clfft-2.12.2/: clfft_gcc5.3.0_RHEL6.7.csv  clfft_gcc5.3.0_RHEL6.8.csv
results/K20Xm/cuda-7.5.18/: clfft_gcc5.3.0_RHEL6.7.csv  cufft_gcc5.3.0_RHEL6.7.csv  gearshifft_clfft_float.csv  gearshifft_cufft_double.csv  gearshifft_cufft_float.csv
results/K20Xm/cuda-8.0.44/: cufft_gcc5.3.0_RHEL6.7.csv  cufft_gcc5.3.0_RHEL6.8.csv
results/K20Xm_gcc5.3.0_cuda7.5/: gearshifft_clfft_double.csv
results/K80/: sbatch_taurus_cufft_clfft_k80.sh
results/K80/clfft-2.12.2/: clfft_gcc5.3.0_RHEL6.7.csv  clfft_gcc5.3.0_RHEL6.8.csv
results/K80/cuda-7.5.18/: clfft_gcc5.3.0_RHEL6.7.csv  cufft_gcc5.3.0_RHEL6.7.csv
results/K80/cuda-8.0.44/: clfft_gcc5.3.0_RHEL6.7.csv  cufft_gcc5.3.0_RHEL6.7.csv  cufft_gcc5.3.0_RHEL6.8.csv  validate_cufft_r2c_inplace_RHEL6.8.csv  validate_cufft_r2c_inplace_small_RHEL6.8.csv  validate_cufft_standalone_r2c_inplace_RHEL6.8.csv  validate_cufft_standalone_r2c_inplace_small_RHEL6.8.csv  validate_cufft_standalone_r2c_tts_inplace_RHEL6.8.csv  validate_cufft_standalone_r2c_tts_inplace_small_RHEL6.8.csv
results/M2090/cuda-7.5.18/: gearshifft_clfft-2.12.1_double_gcc-5.3.0_centos6.3.csv  gearshifft_clfft-2.12.1_float_gcc-5.3.0_centos6.3.csv  gearshifft_cufft_double_gcc-5.3.0_centos6.3.csv  gearshifft_cufft_float_gcc-5.3.0_centos6.3.csv
results/P100-PCIE-16GB/: sbatch_taurus_cufft_clfft_p100.sh
results/P100-PCIE-16GB/clfft-2.12.2/: clfft_gcc5.3.0_CentOS7.3.csv  clfft_gcc5.3.0_ubuntu14.0.4.3.csv  clfft_gcc5.3.0_ubuntu14.04.5.csv  hypnos.sh
results/P100-PCIE-16GB/cuda-8.0.44/: cufft_gcc5.3.0_ubuntu14.0.4.3.csv  cufft_gcc5.3.0_ubuntu14.04.5.csv  hypnos.sh
results/P100-PCIE-16GB/cuda-8.0.61/: cufft_gcc5.3.0_CentOS7.3.csv
results/P100-PCIE-16GB/cuda-9.0.69-beta/: cufft_gcc5.3.0_CentOS7.3.csv
results/broadwell/: .gitignore  fftw_wisdom_3.3.6-pl1_bdw.txt  fftw_wisdom_3.3.6-pl1_bdw_.txt  fftw_wisdom_3.3.6-pl1_bdw__.txt  fftwf_wisdom_3.3.6-pl1_bdw.txt  fftwf_wisdom_3.3.6-pl1_bdw_.txt  fftwf_wisdom_3.3.6-pl1_bdw__.txt  sbatch_furiosa_fftw_broadwell.sh  sbatch_furiosa_fftw_generate_wisdom_broadwell.sh  sbatch_furiosa_fftw_mklwrappers_broadwell.sh
results/broadwell/fftw3.3.6pl1/: fftw_estimate_gcc5.3.0_RHEL7.2.1d.csv  fftw_estimate_gcc5.3.0_RHEL7.2.2d.csv  fftw_estimate_gcc5.3.0_RHEL7.2.3d.csv  fftw_gcc5.3.0_RHEL7.2.1d.csv  fftw_gcc5.3.0_RHEL7.2.2d.csv  fftw_gcc5.3.0_RHEL7.2.3d.csv  fftw_wisdom_gcc5.3.0_RHEL7.2.1d.csv  fftw_wisdom_gcc5.3.0_RHEL7.2.2d.csv  fftw_wisdom_gcc5.3.0_RHEL7.2.3d.csv
results/broadwell/mklwrappers-2017u4/: fftwmklwrappers_estimate_gcc5.3.0_RHEL7.2.1d.csv  fftwmklwrappers_estimate_gcc5.3.0_RHEL7.2.2d.csv  fftwmklwrappers_estimate_gcc5.3.0_RHEL7.2.3d.csv  (+3 more)
results/haswell/: sbatch_furiosa_fftw_mklwrappers_haswell.sh  sbatch_taurus_clfft_haswell.sh  sbatch_taurus_fftw_haswell.sh
rshiny/: README.md  app.r  helper.r
scripts/: eval.r
share/gearshifft/: extents_3d_publication.conf  extents_all_publication.conf  extents_capped_all_publication.conf  extents_small.conf
src/: CMakeLists.txt  benchmark.cpp  options.cpp  statistics.cpp  tests.cpp
test/: CMakeLists.txt  test_clfft.cpp  test_clfft_global_fixture.cpp  test_cufft.cpp  test_fftw.cpp  test_rocfft.cpp  test_rocfft_helper.cpp  tests.cpp
validation/cufft_standalone/: CMakeLists.txt  time_cufft_r2c.cpp
(+24 files in other folders)
